--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
 <body>
 
-  <section id="title">
+  <section class="colored-section" id="title">
 
-    <div class="container-fluid">
+    <div class="container-fluid ">
 
 
       <!-- Nav Bar -->
@@ -39,13 +39,13 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="">Contact</a>
+              <a class="nav-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Pricing</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Download</a>
+              <a class="nav-link" href="#cta">Download</a>
             </li>
           </ul>
         </div>
@@ -56,7 +56,7 @@
       <!-- Title -->
       <div class="row">
         <div class="col-lg-6">
-          <h1>Meet new and interesting dogs nearby.</h1>
+          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
           <button class="btn btn-dark download-button " type="button"><i class="fa-brands fa-apple"></i> Download</button>
           <button class="btn btn-outline-light download-button" type="button"><i class="fa-brands fa-google-play"></i> Download</button>
         </div>
@@ -71,23 +71,23 @@
 
   <!-- Features -->
 
-  <section id="features">
+  <section class="white-section" id="features">
 
-    <div class="row">
+    <div class="row container-fluid">
 
       <div class="col-lg-4 feature-box">
         <i class="icon fa-solid fa-circle-check fa-4x"></i>
-        <h3>Easy to use.</h3>
+        <h3 class="feature-heading">Easy to use.</h3>
         <p>So easy to use, even your dog could do it.</p>
       </div>
       <div class="col-lg-4 feature-box ">
         <i class="icon fa-solid fa-bullseye fa-4x"></i>
-        <h3>Elite Clientele</h3>
+        <h3 class="feature-heading">Elite Clientele</h3>
         <p>We have all the dogs, the greatest dogs.</p>
       </div>
       <div class="col-lg-4 feature-box">
         <i class="icon fa-solid fa-heart fa-4x"></i>
-        <h3>Guaranteed to work.</h3>
+        <h3 class="feature-heading">Guaranteed to work.</h3>
         <p>Find the love of your dog's life or your money back.</p>
       </div>
 
@@ -98,16 +98,16 @@
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section class="colored-section" id="testimonials">
 
   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
-    <div class="carousel-item active">
-      <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+    <div class="carousel-item active container-fluid">
+      <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
       <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
       <em>Pebbles, New York</em>
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item container-fluid">
       <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
       <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
       <em>Beverly, Illinois</em>
@@ -133,7 +133,7 @@
 
   <!-- Press -->
 
-  <section id="press">
+  <section class="colored-section" id="press">
     <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
@@ -144,9 +144,9 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section class="white-section" id="pricing">
 
-    <h2>A Plan for Every Dog's Needs</h2>
+    <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
   <div class="row">
@@ -156,7 +156,7 @@
           <h3>Chihuahua</h3>
         </div>
         <div class="card-body">
-          <h2>Free</h2>
+          <h2 class="price-text">Free</h2>
           <p>5 Matches Per Day</p>
           <p>10 Messages Per Day</p>
           <p>Unlimited App Usage</p>
@@ -173,7 +173,7 @@
           <h3>Labrador</h3>
         </div>
         <div class="card-body">
-          <h2>$49 / mo</h2>
+          <h2 class="price-text">$49 / mo</h2>
           <p>Unlimited Matches</p>
           <p>Unlimited Messages</p>
           <p>Unlimited App Usage</p>
@@ -188,7 +188,8 @@
         <div class="card-header">
           <h3>Mastiff</h3>
         </div>
-        <div class="card-body"><h2>$99 / mo</h2>
+        <div class="card-body">
+          <h2 class="price-text">$99 / mo</h2>
           <p>Pirority Listing</p>
           <p>Unlimited Matches</p>
           <p>Unlimited Messages</p>
@@ -203,33 +204,32 @@
   </div>
 
 
-
-
-
-
-
-
-
-
   </section>
 
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <section class="colored-section" id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <div class="container-fluid">
+      <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
+      <button class="btn btn-dark download-button " type="button"><i class="fa-brands fa-apple"></i> Download</button>
+      <button class="btn btn-outline-light download-button" type="button"><i class="fa-brands fa-google-play"></i> Download</button>
+    </div>
 
   </section>
 
 
   <!-- Footer -->
 
-  <footer id="footer">
-
-    <p>© Copyright TinDog</p>
+  <footer class="white-section" id="footer">
+    <div class="container-fluid">
+      <i class="social-icon fa-brands fa-twitter"></i>
+      <i class="social-icon fa-brands fa-facebook-f"></i>
+      <i class="social-icon fa-brands fa-instagram"></i>
+      <i class="social-icon fa-solid fa-envelope"></i>
+      <p>© Copyright TinDog</p>
+    </div>
 
   </footer>
 
